--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "detect-python-interpreter",
+  "version": "1.0.0",
   "description": "Detect the executable python interpreter cmd in $PATH.",
   "author": "XadillaX <i@233.dev>",
   "license": "MIT",
