--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -25,7 +25,7 @@ jobs:
       uses: actions/setup-node@v3
       with:
         node-version: ${{ matrix.node-version }}
-    - name: Use Python ${{ matrix.node-version }}
+    - name: Use Python ${{ matrix.python-version }}
       uses: actions/setup-python@v3
       with:
         node-version: ${{ matrix.python-version }}
