--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -16,13 +16,20 @@ jobs:
       matrix:
         node-version: [12.x, 14.x, 16.x]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
-
+        python-version: ["2.7", "3.7", "3.10", "pypy-3.8"]
+        # See supported Python release schedule at https://devguide.python.org/#status-of-python-branches
     steps:
+    - run: brew install python-launcher  # just to ensure this does not create conflicts
     - uses: actions/checkout@v3
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v3
       with:
         node-version: ${{ matrix.node-version }}
+    - name: Use Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v3
+      with:
+        node-version: ${{ matrix.python-version }}
+    - run: py --list
     - run: npm install
     - run: npm run ci
     - name: Coveralls
