--- a/.github/workflows/detect_python.yml
+++ b/.github/workflows/detect_python.yml
@@ -53,7 +53,7 @@ jobs:
         echo -n "python "  && python  --version || true
         echo -n "python2 " && python2 --version || true
         echo -n "python3 " && python3 --version || true
-        npm run ci
+        npm run ci || true
 
     # Let's re-enable Python 3
     - name: "Py3 ONLY: python ✅, python2 🚫, python3 ✅"
