--- a/.github/workflows/detect_python.yml
+++ b/.github/workflows/detect_python.yml
@@ -11,7 +11,7 @@ on:
     branches: [ master ]
 
 jobs:
-  build:
+  detect_python:
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
